# Project

./: .env.example  .gitattributes  .gitignore  04200d8f-d4fe-441b-94c9-ce31f4af0dd0.docx  0df943d0-c65b-4b0d-806d-ced1bd65c912.docx  11e947f0-5a9f-4995-a837-7f1cff8f27e5.docx  1a5aae82-5f81-487c-ab6a-43f7be8a4d87.html  1ede5fb7-7bc6-4e6d-b8d2-f7320c78a9f4.docx  5663ac2a-df5e-40d1-9110-ff7a256f9894.docx  7d30267f-d523-4aca-b915-8e2f1ba41a78.docx  88a93379-631d-4329-948b-1b93fe8bd203.docx  8c4fd175-8a61-4a82-97a6-ce3a6e89cefb.docx  Dockerfile  Dockerfile copy  README.md  a64c3f77-8554-47c6-ad9b-c7fbd7eef552.docx  aa754b41-b65d-4325-85cd-6e0bedded179.docx  app.log.1  app.log.2  app.log.3  app.log.4  app.log.5  autoUpload.sh  b5e447e5-1eb1-4862-a3a3-1cda44069e75.docx  cecf90d8-4ace-41eb-93ac-f073368c898b.docx  cloudbeds.txt  createPostgres.sh  data.json  docker-compose.local.yml  docker-compose.yml  docs.md  e8c8fd1d-9358-48da-be16-5396ad786769.docx  elevenlabs_guides.md  generate_project_structure.py  init.bat  init.sh  install.sh  installations.md  migrate.sh  package_repo.py  (+10 more)
server/: Dockerfile  pyproject.toml
server/api/: celery.py  settings.py  urls.py
server/api/ai_layers/: access.py  actions.py  admin.py  agent_loop.py  agent_task_dispatch.py  agent_task_helpers.py  apps.py  cache_utils.py  mcp_access.py  mcp_external_access.py  mcp_external_catalog.py  mcp_external_tools.py  mcp_external_views.py  mcp_outbound_client.py  mcp_views.py  models.py  platform_assistant.py  platform_assistant_task.py  schemas.py  serializers.py  signals.py  tasks.py  tests.py  tests_calendar_tools.py  tests_schedule_task.py  urls.py  vertex_gemini_agent_loop.py  views.py
server/api/assignments/: actions.py  admin.py  apps.py  models.py  onboarding_actions.py  schemas.py  serializers.py  services.py  templates.py  tests.py  tests_platform_tools.py  urls.py  views.py
server/api/authenticate/: admin.py  auth_handoff.py  feature_flags_registry.py  models.py  org_membership.py  organization_management_admin.py  serializers.py  services.py  signals.py  subdomain_utils.py  system_management_admin.py  tasks.py  tenant_favicon.py  tenant_portal_access.py  tenant_schemas.py  tenant_services.py  tests.py  tests_auth_handoff.py  tests_organization_management_admin.py  tests_organization_management_i18n.py  tests_organization_tenant.py  tests_organization_timezone.py  tests_tenant_portal_access.py  urls.py  views.py
server/api/cloudbeds/: apps.py  models.py  urls.py  views.py
server/api/consumption/: actions.py  admin.py  models.py  tasks.py  tests.py  tests_wallet.py  wallet_ops.py
server/api/data_governance/: admin.py  apps.py  constants.py  models.py  permissions.py  schemas.py  serializers.py  tasks.py  tests.py  urls.py  views.py
server/api/notify/: apps.py  (+10 more)
server/scripts/: test_cloudbeds.py  write_org_admin_locale.py
streaming/: .dockerignore  Dockerfile  app.log.1  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.node.json  vite-preserve-widget-plugin.ts  vite.config.ts  vite.widget.config.ts
streaming/client/: index.html  tsconfig.json
streaming/server/: event_triggers.py  logger.py  redis_manager.py  routes.py  socket.py  socket_manager.py
(+806 files in other folders)
