[project]
name = "masscer-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "beautifulsoup4",
    "celery",
    "chardet",
    "chromadb",
    "colorlog",
    "dj-database-url",
    "django",
    "django-celery-beat",
    "django-celery-results",
    "django-cors-headers",
    "django-model-utils",
    "django-redis",
    "djangorestframework",
    "elevenlabs",
    "faker",
    "firecrawl-py",
    "gevent",
    "gunicorn",
    "openai",
    "pillow",
    "pydantic",
    "pymupdf",
    "pypandoc",
    "python-crontab",
    "python-docx",
    "python-dotenv",
    "pytz",
    "psutil",
    "psycopg2-binary",
    "redis",
    "requests",
    "stripe",
    "runwayml",
    "tiktoken",
    "docxtpl",
    "django-storages[s3]",
    "whitenoise",
    "youtube-transcript-api",
    "google-genai>=1.70.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "polib>=1.2.0",
]
